--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "arkham-investigator",
   "main": "expo-router/entry",
-  "version": "2.0.7",
+  "version": "2.0.8",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -9,6 +9,7 @@
     "a:p": "npm run prebuild:android",
     "a:pd": "npm run prebuild:android:dev",
     "i": "npm run ios",
+    "i:d": "npm run ios:device",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "ios:device": "expo run:ios --device",
@@ -32,6 +33,7 @@
     "build:apk": "npm run eas:apk -- --local",
     "build:android": "npm run npm run eas:android -- --local",
     "build:ios": "npm run prebuild:ios && eas build -p ios --local",
+    "submit:ios": "eas submit -p ios",
     "setup:font": "tsx ./cli/update-icon-font.ts",
     "setup": "npm run setup:font",
     "version:increment": "tsx ./cli/increment-version.ts",
