--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eas:android": "npm run version:increment && npm run prebuild:android && eas build -p android",
     "eas:apk": "npm run eas:android -- --profile apk",
     "build:apk": "npm run eas:apk -- --local",
-    "build:android": "npm run npm run eas:android -- --local",
+    "build:android": "npm run eas:android -- --local",
     "build:ios": "npm run prebuild:ios && eas build -p ios --local",
     "submit:ios": "eas submit -p ios",
     "setup:font": "tsx ./cli/update-icon-font.ts",
