--- a/ios/Investigator/Info.plist
+++ b/ios/Investigator/Info.plist
@@ -74,5 +74,7 @@
     <string>Dark</string>
     <key>UIViewControllerBasedStatusBarAppearance</key>
     <false/>
+    <key>ITSAppUsesNonExemptEncryption</key>
+    <false/>
   </dict>
 </plist>
