--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
 		"eas:apk": "npm run eas:android -- --profile apk",
 		"build:apk": "npm run eas:apk -- --local",
 		"build:android": "npm run eas:android -- --local",
-		"build:ios": "npm run prebuild:ios && eas build -p ios --local",
+		"build:ios": "npm run prebuild:ios && eas build -p ios --local && npm run rename:ios",
+		"postbuild:ios": "tsx ./cli/rename-build.ts .ipa",
+		"postbuild:android": "tsx ./cli/rename-build.ts .aab",
+		"postbuild:apk": "tsx ./cli/rename-build.ts .apk",
 		"submit:ios": "eas submit -p ios",
 		"setup:font": "tsx ./cli/update-icon-font.ts",
 		"setup": "npm run setup:font",
