--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-# EXPO_PUBLIC_INVESTIGATORS_API_URL="https://neizerth.github.io/ArkhamInvestigatorData"
-EXPO_PUBLIC_INVESTIGATORS_API_URL="https://investigator.ahlcg.online"
+EXPO_PUBLIC_INVESTIGATORS_API_URL="https://neizerth.github.io/ArkhamInvestigatorData"
+# EXPO_PUBLIC_INVESTIGATORS_API_URL="https://investigator.ahlcg.online"
 
-# EXPO_PUBLIC_API_URL="https://neizerth.github.io/ArkhamDividerData"
-EXPO_PUBLIC_API_URL="https://divider.ahlcg.online"
+EXPO_PUBLIC_API_URL="https://neizerth.github.io/ArkhamDividerData"
+# EXPO_PUBLIC_API_URL="https://divider.ahlcg.online"
 
 EXPO_PUBLIC_GOOGLE_PLAY_URL="https://play.google.com/store/apps/details?id=com.arkhaminvestigator"
 EXPO_PUBLIC_APP_STORE_URL=""
 
-#EXPO_PUBLIC_ASSET_URL="https://neizerth.github.io/ArkhamInvestigatorData"
-EXPO_PUBLIC_ASSET_URL="https://investigator.ahlcg.online"
+EXPO_PUBLIC_ASSET_URL="https://neizerth.github.io/ArkhamInvestigatorData"
+# EXPO_PUBLIC_ASSET_URL="https://investigator.ahlcg.online"
