--- a/package.json
+++ b/package.json
@@ -86,6 +86,8 @@
     "i18next": "^25.2.1",
     "intl-pluralrules": "^2.0.1",
     "mathjs": "^14.3.0",
+    "mime": "^4.1.0",
+    "mime-db": "^1.54.0",
     "moment": "^2.30.1",
     "petrovich": "^0.2.1",
     "ramda": "^0.30.1",
