--- a/package.json
+++ b/package.json
@@ -1,159 +1,157 @@
 {
-  "name": "arkham-investigator",
-  "main": "expo-router/entry",
-  "version": "2.1.7",
-  "scripts": {
-    "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "a": "npm run prebuild:android:dev && npm run android",
-    "a:p": "npm run prebuild:android",
-    "a:pd": "npm run prebuild:android:dev",
-    "i": "npm run ios",
-    "i:d": "npm run ios:device",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "ios:device": "expo run:ios --device",
-    "web": "expo start --web",
-    "test": "jest --watchAll",
-    "expo:lint": "expo lint",
-    "circular": "npx madge --circular slices/",
-    "t": "npm run ts:check",
-    "ts:check": "tsc",
-    "lint": "npx @biomejs/biome check ./slices",
-    "f": "npm run format",
-    "format": "npx @biomejs/biome check --write ./slices",
-    "lint:fix": "npx @biomejs/biome lint --write ./slices",
-    "prebuild": "expo prebuild",
-    "prebuild:android:dev": "MODE=development npm run prebuild -- -p android",
-    "prebuild:android": "npm run prebuild -- -p android",
-    "prebuild:ios": "npm run prebuild -- -p ios",
-    "eas:android": "npm run version:increment && npm run prebuild:android && eas build -p android",
-    "eas:apk": "npm run eas:android -- --profile apk",
-    "build:apk": "npm run eas:apk -- --local",
-    "build:android": "npm run eas:android -- --local",
-    "build:ios": "npm run prebuild:ios && eas build -p ios --local",
-    "postbuild:ios": "tsx ./cli/rename-build.ts .ipa",
-    "postbuild:android": "tsx ./cli/rename-build.ts .aab",
-    "postbuild:apk": "tsx ./cli/rename-build.ts .apk",
-    "submit:ios": "sh ./cli/submit-ios.sh",
-    "setup:font": "tsx ./cli/update-icon-font.ts",
-    "setup": "npm run setup:font",
-    "version:increment": "tsx ./cli/increment-version.ts",
-    "gradle:clean": "cd android && ./gradlew clean",
-    "expo:clear": "expo start -c",
-    "pod:install": "cd ios && pod install"
-  },
-  "jest": {
-    "preset": "jest-expo"
-  },
-  "dependencies": {
-    "@fanchenbao/react-native-scroll-indicator": "^0.4.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-community/slider": "4.5.6",
-    "@react-navigation/native": "^7.0.14",
-    "@reduxjs/toolkit": "^2.5.1",
-    "arkham-divider-data": "^1.1.14",
-    "arkham-investigator-data": "^2.0.6",
-    "axios": "^1.11.0",
-    "domelementtype": "^2.3.0",
-    "dotenv": "^17.2.1",
-    "expo": "~53.0.23",
-    "expo-application": "~6.1.5",
-    "expo-asset": "~11.1.5",
-    "expo-audio": "~0.4.9",
-    "expo-blur": "~14.1.5",
-    "expo-build-properties": "~0.14.8",
-    "expo-constants": "~17.1.6",
-    "expo-file-system": "~18.1.11",
-    "expo-font": "~13.3.1",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.4.0",
-    "expo-image-manipulator": "~13.1.7",
-    "expo-keep-awake": "~14.1.4",
-    "expo-linking": "~7.1.7",
-    "expo-navigation-bar": "~4.2.8",
-    "expo-router": "~5.1.7",
-    "expo-screen-orientation": "~8.1.7",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.11",
-    "expo-web-browser": "~14.2.0",
-    "fast-memoize": "^2.5.2",
-    "fast-shuffle": "^6.1.1",
-    "html-dom-parser": "^5.1.1",
-    "html-react-parser": "^5.2.2",
-    "i18next": "^25.2.1",
-    "intl-pluralrules": "^2.0.1",
-    "mathjs": "^14.3.0",
-    "mime": "^4.1.0",
-    "mime-db": "^1.54.0",
-    "moment": "^2.30.1",
-    "petrovich": "^0.2.1",
-    "ramda": "^0.30.1",
-    "ramda-adjunct": "^5.1.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-i18next": "^15.4.1",
-    "react-native": "0.79.5",
-    "react-native-android-navbar-height": "^0.3.3",
-    "react-native-edge-to-edge": "1.6.0",
-    "react-native-element-dropdown": "^2.12.4",
-    "react-native-error-boundary": "^2.0.0",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-get-random-values": "^1.11.0",
-    "react-native-gradients": "^2.1.1",
-    "react-native-haptic-feedback": "^2.3.3",
-    "react-native-localize": "^3.4.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-restart": "^0.0.27",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-storage": "^1.0.1",
-    "react-native-svg": "15.11.2",
-    "react-native-toast-message": "^2.3.3",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "react-native-zip-archive": "^7.0.2",
-    "react-redux": "^9.2.0",
-    "react-responsive": "^10.0.0",
-    "redux-devtools-expo-dev-plugin": "^2.0.0",
-    "redux-persist": "^6.0.0",
-    "redux-saga": "^1.3.0",
-    "redux-toolkit-helpers": "^1.0.3",
-    "rn-statusbar-height": "^2.1.1",
-    "semver": "^7.7.1",
-    "styled-components": "^6.1.15",
-    "uuid": "^11.0.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@biomejs/biome": "1.9.4",
-    "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.8.0",
-    "@react-native-community/cli": "^20.0.2",
-    "@types/color": "^4.2.0",
-    "@types/fast-shuffle": "^4.5.3",
-    "@types/jest": "^29.5.12",
-    "@types/moment": "^2.11.29",
-    "@types/ramda": "^0.30.2",
-    "@types/react": "~19.0.0",
-    "@types/react-test-renderer": "^19.0.0",
-    "@types/semver": "^7.7.0",
-    "@types/styled-components-react-native": "^5.2.5",
-    "jest": "^29.2.1",
-    "jest-expo": "~53.0.10",
-    "knip": "^5.63.1",
-    "lefthook": "^1.11.3",
-    "react-native-svg-transformer": "^1.5.0",
-    "react-test-renderer": "19.0.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.3.3"
-  },
-  "private": true,
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  }
+	"name": "arkham-investigator",
+	"main": "expo-router/entry",
+	"version": "2.1.8",
+	"scripts": {
+		"start": "expo start",
+		"reset-project": "node ./scripts/reset-project.js",
+		"a": "npm run prebuild:android:dev && npm run android",
+		"a:p": "npm run prebuild:android",
+		"a:pd": "npm run prebuild:android:dev",
+		"i": "npm run ios",
+		"i:d": "npm run ios:device",
+		"android": "expo run:android",
+		"ios": "expo run:ios",
+		"ios:device": "expo run:ios --device",
+		"web": "expo start --web",
+		"test": "jest --watchAll",
+		"expo:lint": "expo lint",
+		"circular": "npx madge --circular slices/",
+		"t": "npm run ts:check",
+		"ts:check": "tsc",
+		"lint": "npx @biomejs/biome check ./slices",
+		"f": "npm run format",
+		"format": "npx @biomejs/biome check --write ./slices",
+		"lint:fix": "npx @biomejs/biome lint --write ./slices",
+		"prebuild": "expo prebuild",
+		"prebuild:android:dev": "MODE=development npm run prebuild -- -p android",
+		"prebuild:android": "npm run prebuild -- -p android",
+		"prebuild:ios": "npm run prebuild -- -p ios",
+		"eas:android": "npm run version:increment && npm run prebuild:android && eas build -p android",
+		"eas:apk": "npm run eas:android -- --profile apk",
+		"build:apk": "npm run eas:apk -- --local",
+		"build:android": "npm run eas:android -- --local",
+		"build:ios": "npm run prebuild:ios && eas build -p ios --local",
+		"postbuild:ios": "tsx ./cli/rename-build.ts .ipa",
+		"postbuild:android": "tsx ./cli/rename-build.ts .aab",
+		"postbuild:apk": "tsx ./cli/rename-build.ts .apk",
+		"submit:ios": "sh ./cli/submit-ios.sh",
+		"setup:font": "tsx ./cli/update-icon-font.ts",
+		"setup": "npm run setup:font",
+		"version:increment": "tsx ./cli/increment-version.ts",
+		"gradle:clean": "cd android && ./gradlew clean",
+		"expo:clear": "expo start -c",
+		"pod:install": "cd ios && pod install"
+	},
+	"jest": {
+		"preset": "jest-expo"
+	},
+	"dependencies": {
+		"@fanchenbao/react-native-scroll-indicator": "^0.4.0",
+		"@react-native-async-storage/async-storage": "2.1.2",
+		"@react-native-community/netinfo": "^11.4.1",
+		"@react-native-community/slider": "4.5.6",
+		"@react-navigation/native": "^7.0.14",
+		"@reduxjs/toolkit": "^2.5.1",
+		"arkham-divider-data": "^1.1.14",
+		"arkham-investigator-data": "^2.0.6",
+		"axios": "^1.11.0",
+		"domelementtype": "^2.3.0",
+		"dotenv": "^17.2.1",
+		"expo": "~53.0.23",
+		"expo-application": "~6.1.5",
+		"expo-asset": "~11.1.5",
+		"expo-audio": "~0.4.9",
+		"expo-blur": "~14.1.5",
+		"expo-build-properties": "~0.14.8",
+		"expo-constants": "~17.1.6",
+		"expo-file-system": "~18.1.11",
+		"expo-font": "~13.3.1",
+		"expo-haptics": "~14.1.4",
+		"expo-image": "~2.4.0",
+		"expo-image-manipulator": "~13.1.7",
+		"expo-keep-awake": "~14.1.4",
+		"expo-linking": "~7.1.7",
+		"expo-navigation-bar": "~4.2.8",
+		"expo-router": "~5.1.7",
+		"expo-screen-orientation": "~8.1.7",
+		"expo-splash-screen": "~0.30.10",
+		"expo-status-bar": "~2.2.3",
+		"expo-system-ui": "~5.0.11",
+		"expo-web-browser": "~14.2.0",
+		"fast-memoize": "^2.5.2",
+		"fast-shuffle": "^6.1.1",
+		"html-dom-parser": "^5.1.1",
+		"html-react-parser": "^5.2.2",
+		"i18next": "^25.2.1",
+		"intl-pluralrules": "^2.0.1",
+		"mathjs": "^14.3.0",
+		"mime": "^4.1.0",
+		"mime-db": "^1.54.0",
+		"moment": "^2.30.1",
+		"petrovich": "^0.2.1",
+		"ramda": "^0.30.1",
+		"ramda-adjunct": "^5.1.0",
+		"react": "19.0.0",
+		"react-dom": "19.0.0",
+		"react-i18next": "^15.4.1",
+		"react-native": "0.79.5",
+		"react-native-android-navbar-height": "^0.3.3",
+		"react-native-edge-to-edge": "1.6.0",
+		"react-native-element-dropdown": "^2.12.4",
+		"react-native-error-boundary": "^2.0.0",
+		"react-native-gesture-handler": "~2.24.0",
+		"react-native-get-random-values": "^1.11.0",
+		"react-native-gradients": "^2.1.1",
+		"react-native-haptic-feedback": "^2.3.3",
+		"react-native-localize": "^3.4.1",
+		"react-native-reanimated": "~3.17.4",
+		"react-native-restart": "^0.0.27",
+		"react-native-safe-area-context": "5.4.0",
+		"react-native-screens": "~4.11.1",
+		"react-native-storage": "^1.0.1",
+		"react-native-svg": "15.11.2",
+		"react-native-toast-message": "^2.3.3",
+		"react-native-web": "^0.20.0",
+		"react-native-webview": "13.13.5",
+		"react-native-zip-archive": "^7.0.2",
+		"react-redux": "^9.2.0",
+		"react-responsive": "^10.0.0",
+		"redux-devtools-expo-dev-plugin": "^2.0.0",
+		"redux-persist": "^6.0.0",
+		"redux-saga": "^1.3.0",
+		"redux-toolkit-helpers": "^1.0.3",
+		"rn-statusbar-height": "^2.1.1",
+		"semver": "^7.7.1",
+		"styled-components": "^6.1.15",
+		"uuid": "^11.0.5"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.25.2",
+		"@biomejs/biome": "1.9.4",
+		"@commitlint/cli": "^19.8.0",
+		"@commitlint/config-conventional": "^19.8.0",
+		"@react-native-community/cli": "^20.0.2",
+		"@types/color": "^4.2.0",
+		"@types/fast-shuffle": "^4.5.3",
+		"@types/jest": "^29.5.12",
+		"@types/moment": "^2.11.29",
+		"@types/ramda": "^0.30.2",
+		"@types/react": "~19.0.0",
+		"@types/react-test-renderer": "^19.0.0",
+		"@types/semver": "^7.7.0",
+		"@types/styled-components-react-native": "^5.2.5",
+		"jest": "^29.2.1",
+		"jest-expo": "~53.0.10",
+		"knip": "^5.63.1",
+		"lefthook": "^1.11.3",
+		"react-native-svg-transformer": "^1.5.0",
+		"react-test-renderer": "19.0.0",
+		"tsx": "^4.20.3",
+		"typescript": "^5.3.3"
+	},
+	"private": true,
+	"commitlint": {
+		"extends": ["@commitlint/config-conventional"]
+	}
 }
