--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "react-native-gradients": "^2.1.1",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-localize": "^3.4.1",
+    "react-native-navigation-mode": "^1.2.3",
     "react-native-reanimated": "~3.17.4",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "5.4.0",
