--- a/modules/chaos-odds/rust/Cargo.toml
+++ b/modules/chaos-odds/rust/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+
+[lib]
+crate-type = [
+    "staticlib", # for iOS
+    "cdylib"    # for Android
+]
