--- a/modules/chaos-odds/android/build.gradle
+++ b/modules/chaos-odds/android/build.gradle
@@ -36,8 +36,32 @@ android {
   defaultConfig {
     versionCode 1
     versionName "0.7.6"
+    
+    externalNativeBuild {
+      cmake {
+        cppFlags "-std=c++17 -fexceptions -frtti"
+        arguments "-DANDROID_STL=c++_shared"
+      }
+    }
+    
+    ndk {
+      abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+    }
   }
+  
+  externalNativeBuild {
+    cmake {
+      path "CMakeLists.txt"
+    }
+  }
+  
   lintOptions {
     abortOnError false
+  }
+  
+  sourceSets {
+    main {
+      jniLibs.srcDirs = ['src/main/jniLibs']
+    }
   }
 }
